# Backend-Developer-Test

./: .gitignore  README.md  REQUIREMENTS_CHECK.md  demo.py  main.py  pyproject.toml  test_api.py
controllers/: auth_controller.py  post_controller.py
database/: config.py
models/: post.py  user.py
schemas/: post.py  user.py
services/: post_service.py  user_service.py
utils/: auth.py  cache.py  dependencies.py
